lab1/Test/L1-A-4-15.cmm
float - y ( ) {
  int t2S6Kp_3F [ 768563651 ] [ 1381086519 ] G6ERH8xv_ox_E1 
    [ 1921555728 ] , fsF9SFAu2_uhpc , fFS0 ;
}
int XE8CaBOzzcrA [ 974449173 ] 
;
float hHFmz8z2cSfh9_S8K4JW struct , Lq [ 2136483473 
  ] 

;
int while hSk2GpFetnfrXNbXn ( ) {
}
int CU9NOCClvhr [ 1382758841 ] 
;
struct {
  struct * r1irH6SyP_ {
  }sE12HYAf4C1J5 = zQZC1ViTa , ylRZVd8IKgeXPF_KnHy 
    ;
};
